# Test_deepL

./: .gitignore  pyproject.toml  requirement.txt
Notebook/: Lightning_ResNet_CIFAR10.ipynb  ResNet19.ipynb  Resnet_50+.ipynb  distribuition.csv
Notebook/logs/: events.out.tfevents.1700837337.MacBook-Air-di-Fabio.local.74000.0  events.out.tfevents.1701346292.MacBook-Air-di-Fabio.local.20293.0
Python/Lightning_Resnet19/: config.yaml  main.py
Python/Lightning_Resnet19/DataModules/: dataset_selector.py
Python/Lightning_Resnet19/LightningModules/: lightning_model.py
Python/Lightning_Resnet19/Models/: resnet19.py
Python/Resnet19/: test_resnet.py
Python/Resnet19/Data/: dataloader.py
Python/Resnet19/Logs/: events.out.tfevents.1701342774.MacBook-Air-di-Fabio.local.18608.0
Python/Resnet19/Models/: resnet19.py
Python/Resnet19/Training/: train.py
Python/Resnet19/Utils/: utils.py
